bug(website): dark mode switch placement on mobile fix (#431)

--- a/documentation-website/src/index.css
+++ b/documentation-website/src/index.css
@@ -71,13 +71,20 @@ strong {
 
 header {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 90% 10%;
   background-color: var(--light-gray);
   padding-bottom: 1em;
   padding-top: 1em;
+}
+
+header button {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+header nav {
+  grid-column: 1/3
 }
 
 header img {
@@ -93,6 +100,7 @@ header div {
   align-items: center;
   text-align: left;
   max-width: 360px;
+  padding-left: 2rem;
 }
 
 nav a {
@@ -299,8 +307,16 @@ nav.breadcrumbs li:last-of-type::after {
     );
   }
 
-  header div {
-    padding-left: 1em;
+  header {
+    grid-template-columns: 30% auto 5%;
+  }
+
+  header button {
+    grid-column: 3;
+  }
+  
+  header nav {
+    grid-column: 2;
   }
 
   header strong {
@@ -383,12 +399,8 @@ nav.breadcrumbs li:last-of-type::after {
 }
 
 @media only screen and (width >= 900px) {
-  header {
-    flex-direction: row;
-  }
 
   header div {
-    width: 30%;
     max-width: initial;
   }
 }
